--- a/ticketbooking-frontend/src/components/event-list/event-list.component.html
+++ b/ticketbooking-frontend/src/components/event-list/event-list.component.html
@@ -12,7 +12,7 @@
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef> Action </th>
     <td mat-cell *matCellDef="let e">
-      <button mat-flat-button color="primary" (click) = "openBooking(e)">Book Tickets</button>
+      <button mat-flat-button class="mat-custom-blue" (click) = "openBooking(e)">Book Tickets</button>
     </td>
   </ng-container>
 
