--- a/ticketbooking-frontend/src/components/book-dialog/book-dialog.component.html
+++ b/ticketbooking-frontend/src/components/book-dialog/book-dialog.component.html
@@ -1,10 +1,20 @@
-<h2 mat-dialog-title>Book tickets for {{data.name}}</h2>
+<h2 mat-dialog-title *ngIf="eventObjById">Book tickets for {{eventObjById.name}}</h2>
 <mat-dialog-content>
-    <mat-form-field>
+
+  <ng-container *ngIf="!loading && eventObjById; else loadingTpl">
+    <p>Available Tickets: <strong>{{ eventObjById.remainingTickets }}</strong></p>
+    <mat-form-field appearance="outline" class="w-full">
+        <mat-label>Number of tickets to book : </mat-label>
         <input matInput type ="number" [(ngModel)] = "ticketCount" min="1" placeholder="Number of tickets"/>
     </mat-form-field>
+  </ng-container>      
+    
+   <ng-template #loadingTpl>
+        <p>Loading event details...</p>
+   </ng-template>
 </mat-dialog-content>
-<mat-dialog-actions>
+
+<mat-dialog-actions align="end" *ngIf="!loading">
     <button mat-button (click) = "dialogRef.close()">Cancel</button>
     <button mat-raised-button color="primary" (click)="bookTicket()" [disabled]="loading">Book Event</button>
 </mat-dialog-actions>
